--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -267,6 +267,8 @@ en:
               blank: "Enter a postcode"
         course:
           attributes:
+            campaign_name:
+              inclusion: "Select Yes or No"
             course_code:
               taken: "Course code is already taken"
               blank: "Course code cannot be blank"
