--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -591,7 +591,7 @@ en:
         label: "Yes"
       false:
         label: "No"
-    engineers_teach_physics:
+    campaign_name:
       engineers_teach_physics:
         label: "Yes"
       no_campaign:
